// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPage--widthIsNotRestricted testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPage sets a max-width 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPage--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;
